--- a/index.html
+++ b/index.html
@@ -76,7 +76,8 @@
             <img src="" alt="2">
             <h5>Desktop Dev</h5>
             <div class="par">
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Distinctio necessitatibus exercitationem assumenda labore, quas in praesentium reprehenderit ratione, saepe possimus eaque porro iusto ab rem odit dolorum quasi obcaecati est!</p>
+                <p> Ahighly motivated junior software developer with 1 year of experience in developing software for desktop adipisicing
+                mobile operatting systemsskilled in collaborating with project managers</p>
             </div>
         </div>
         <div class="card">
