--- a/index.html
+++ b/index.html
@@ -84,17 +84,16 @@
             <img src="" alt="1">
             <h5>web Dev</h5>
             <div class="par">
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Distinctio necessitatibus exercitationem assumenda labore, quas in praesentium reprehenderit ratione, saepe possimus eaque porro iusto ab rem odit dolorum quasi obcaecati est!</p>
+                <p>Website design that aims to support the growth and enhancement of your business goals and we provide you with the experts at Website Business Company. The best website creation company in Riyadh, a team of experts in programming and design </p>
             </div>
         </div>
-        <div class="card">
+        <! - - - - - div class="card">
             <img src="" alt="4">
             <h5>Architect Dev</h5>
             <div class="par">
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Distinctio necessitatibus exercitationem assumenda labore, quas in praesentium reprehenderit ratione, saepe possimus eaque porro iusto ab rem odit dolorum quasi obcaecati est!</p>
             </div>
-        </div>
-    </div>
+    </div------->  </div>
 </section>
 <section class="skill">
     <div class="container-skill">
